# pricepulse

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: be3b31bba023_initial_schema.py
backend/app/: config.py  deps.py  main.py
backend/app/api/: alert_rules.py  auth.py  notifications.py  price_history.py  products.py  users.py
backend/app/db/: redis.py  session.py
backend/app/models/: __init__.py  alert_rule.py  base.py  notification.py  price_history.py  product.py  scrape_job.py  user.py
backend/app/schemas/: alert_rule.py  notification.py  price_history.py  product.py  user.py
backend/app/services/: alert_service.py  auth_service.py  notification_service.py  product_service.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_notifications.py  test_products.py  test_scrapers.py
backend/worker/: main.py  scheduler.py  tasks.py
backend/worker/scrapers/: base.py  bs4_scraper.py  playwright_scraper.py
backend/worker/scrapers/extractors/: __init__.py  amazon.py  base.py  generic.py  getyourguide.py  hepsiburada.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: alertRules.ts  auth.ts  client.ts  notifications.ts  priceHistory.ts  products.ts  users.ts
frontend/src/components/: AlertRuleForm.tsx  Breadcrumb.tsx  ConfirmDialog.tsx  EditProductModal.tsx  Layout.tsx  NotificationBadge.tsx  PriceChart.tsx  ProductCard.tsx  (+3 more)
(+11 files in other folders)
