[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pricepulse"
version = "0.1.0"
description = "E-commerce price monitoring SaaS platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "redis>=5.2,<6",
    "arq>=0.26,<1",
    "bcrypt>=4.0,<5",
    "python-jose[cryptography]>=3.3,<4",
    "httpx>=0.28,<1",
    "email-validator>=2.1,<3",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.0,<6",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[project.optional-dependencies]
scraper = [
    "patchright>=1.49,<2",
    "browserforge>=1.2,<2",
]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.28,<1",
    "ruff>=0.8,<1",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
